@@ -7,6 +7,13 @@
 
 <news name="nginx news" link="/" lang="en">
 
+<event date="2017-03-24">
+<para>
+<link doc="en/download.xml">nginx-1.11.12</link>
+mainline version has been released.
+</para>
+</event>
+
 <event date="2017-03-21">
 <para>
 <link doc="en/download.xml">nginx-1.11.11</link>
