@@ -9,6 +9,7 @@
 
 <download tag="mainline" changes="">
 
+<item ver="1.11.12" />
 <item ver="1.11.11" />
 <item ver="1.11.10" />
 <item ver="1.11.9" />
